--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3000">
               <div class="banner__containers ">
-                <img src="/assets/banner_tablet_1.png" class="banner__content__background" alt="...">
+                <img src="./assets/banner_tablet_1.png" class="banner__content__background" alt="...">
                 <div class="banner__content">
                   <span class="banner__content__type">Aviso importante</span>
                   <p class="banner__content__title">Días de inventario 21 y 22 de febrero <span
@@ -47,7 +47,7 @@
             </div>
             <div class="carousel-item active" data-bs-interval="3000">
               <div class="banner__containers ">
-                <img src="/assets/banner_tablet_1.png" class="banner__content__background" alt="...">
+                <img src="./assets/banner_tablet_1.png" class="banner__content__background" alt="...">
                 <div class="banner__content">
                   <span class="banner__content__type">Aviso importante</span>
                   <p class="banner__content__title">Días de inventario 21 y 22 de febrero <span
