--- a/index.html
+++ b/index.html
@@ -15,7 +15,23 @@
   <main>
     <div class="container__tablet">
       <aside class="Menu"></aside>
-      <div class="CapacitacioneSolicitud"></div>
+      <div class="CapacitacioneSolicitud">
+        <div class="capacitaciones__content">
+          <h2 class="capacitaciones__content__title">Capacitamos a tu equipo</h2>
+          <div class="capacitaciones__content__form">
+            <form action="">
+              <input placeholder="Ingresa tú correo" type="email" name="correo" id="correo">
+              <input type="datetime-local" name="datetime" id="datetime">
+              <input placeholder="No de asistentes" type="number" name="asistentes" id="asistentes">
+              <input placeholder="Dirección" type="text" name="direccion" id="direccion">
+              <input id="submit" type="submit" value="Solicitar Capacitación">
+            </form>
+            <p class="capacitaciones__content__politicies">Solicita una capacitación, la fecha y hora solicitadas serna
+              previamente validadas, recibiras un correo
+              de confirmación una vez asignemos a un capacitador.</p>
+          </div>
+        </div>
+      </div>
       <div class="CatalogoFG">
         <div class="catalog__content">
           <img class="catalog__content__image"
@@ -23,8 +39,22 @@
           <h2 class="catalog__content__title">Catálogo FG Electrical</h2>
         </div>
       </div>
-      <div class="CatalogoValmact"></div>
-      <div class="Fichas"></div>
+      <div class="CatalogoValmact">
+        <div class="catalog__content">
+          <img class="catalog__content__image"
+            src="https://cdn.shopify.com/s/files/1/0257/8494/2641/files/catalogo_valmact.jpg?v=1692377696" alt="">
+          <h2 class="catalog__content__title">Catálogo Valmact</h2>
+        </div>
+      </div>
+      <div class="Fichas">
+        <div class="catalog__content">
+          <svg class="catalog__content__paper" xmlns="http://www.w3.org/2000/svg" viewBox=" 0 0 32 32">
+            <path fill="currentColor"
+              d="M28.916 8.01L15.953 1.887a.92.92 0 0 0-1.288.638c-.003.01-1.04 4.83-2.58 9.635c-.525 1.647-1.113 3.275-1.727 4.705l1.665.786c2-4.642 3.584-11.05 4.18-13.613L27.47 9.353c-.346 1.513-1.233 5.223-2.42 8.927c-.767 2.4-1.665 4.797-2.585 6.532c-.89 1.79-1.958 2.67-2.197 2.552c-1.42.03-2.418-1.262-3.09-2.918a13.7 13.7 0 0 1-.657-2.246c-.128-.618-.167-1.006-.17-1.006a.906.906 0 0 0-.52-.73l-12.96-6.12a.924.924 0 0 0-.926.08a.92.92 0 0 0-.38.847c.008.046.195 1.85.947 3.737c.522 1.32 1.407 2.818 2.846 3.575l12.956 6.13l.006-.012c.562.295 1.2.487 1.947.496c1.797-.117 2.777-1.668 3.818-3.525c3-5.69 5.32-16.6 5.338-16.64a.91.91 0 0 0-.504-1.02z" />
+          </svg>
+          <h2 class="catalog__content__title">Catálogo Valmact</h2>
+        </div>
+      </div>
       <div class="BannerArea">
         <div id="carouselExampleInterval" class="carousel slide carousel_banner" data-bs-ride="carousel">
           <div class="carousel-inner">
@@ -84,7 +114,28 @@
 
         </div>
       </div>
-      <div class="TiendasEnLinea"></div>
+      <div class="TiendasEnLinea">
+        <div class="TiendaEnLinea__Content row">
+          <div class="TiendaEnLinea__FG col-6">
+            <h2>Cotiza en linea <span> FG </span></h2>
+            <img src="./assets/TiendaFG.png" alt="">
+          </div>
+          <div class="TiendaEnLinea__FGM col-6">
+            <h2>Cotiza en linea <span> Valmact </span></h2>
+            <img src="./assets/TiendaFGM.png" alt="">
+          </div>
+          <div class="col-12">
+            <div class="TiendaEnLinea__codigo row">
+              <h3 class="">Descuentos especiales</h3>
+              <p class="col-8">Utiliza esté código de descuento en nuestras tiendas en linea, recibe puntos en tus
+                compras realizadas
+                desde la tienda</p>
+              <p class="TiendaEnLinea__codigo__discount col-2">Codigo: <span>TESTCODE</span></p>
+            </div>
+          </div>
+        </div>
+
+      </div>
       <div class="SobreNosotros"></div>
       <div class="Merch"></div>
       <div class="ContainerCapacitaciones"></div>
