--- a/index.html
+++ b/index.html
@@ -14,7 +14,35 @@
 <body>
   <main>
     <div class="container__tablet">
-      <aside class="Menu"></aside>
+      <div class="SideBar">
+        <div class="Menu__content">
+          <div class="Menu__header">
+            <span class="menu__icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+                viewBox="0 0 16 16">
+                <g fill="#031226">
+                  <path
+                    d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293z" />
+                  <path d="m8 3.293l6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293z" />
+                </g>
+              </svg></span>
+            <span class="menu__icon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16">
+                <path fill="#031226"
+                  d="M9 7a2 2 0 1 1-4 0a2 2 0 0 1 4 0M8 7a1 1 0 1 0-2 0a1 1 0 0 0 2 0M1 4.25C1 3.56 1.56 3 2.25 3h9.5c.69 0 1.25.56 1.25 1.25v5.5c0 .69-.56 1.25-1.25 1.25h-9.5C1.56 11 1 10.44 1 9.75zM2.25 4a.25.25 0 0 0-.25.25V5h.5a.5.5 0 0 0 .5-.5V4zM2 9.75c0 .138.112.25.25.25H3v-.5a.5.5 0 0 0-.5-.5H2zm2-.25v.5h6v-.5A1.5 1.5 0 0 1 11.5 8h.5V6h-.5A1.5 1.5 0 0 1 10 4.5V4H4v.5A1.5 1.5 0 0 1 2.5 6H2v2h.5A1.5 1.5 0 0 1 4 9.5m7 .5h.75a.25.25 0 0 0 .25-.25V9h-.5a.5.5 0 0 0-.5.5zm1-5v-.75a.25.25 0 0 0-.25-.25H11v.5a.5.5 0 0 0 .5.5zm-7.5 8a1.5 1.5 0 0 1-1.427-1.036c.139.024.281.036.427.036h8.25A2.25 2.25 0 0 0 14 9.75V5.085A1.5 1.5 0 0 1 15 6.5v3.25A3.25 3.25 0 0 1 11.75 13z" />
+              </svg>
+            </span>
+          </div>
+          <div class="Menu__footer">
+            <span class="menu__icon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 15 15">
+                <path fill="#031226" fill-rule="evenodd"
+                  d="M7 1h7v13H7v-1h6V2H7zm.854 3.146l3.34 3.34l-3.327 3.603l-.734-.678L9.358 8H1V7h8.293L7.146 4.854z"
+                  clip-rule="evenodd" />
+              </svg>
+            </span>
+          </div>
+        </div>
+      </div>
       <div class="CapacitacioneSolicitud">
         <div class="capacitaciones__content">
           <h2 class="capacitaciones__content__title">Capacitamos a tu equipo</h2>
@@ -127,7 +155,7 @@
           <div class="col-12">
             <div class="TiendaEnLinea__codigo row">
               <h3 class="">Descuentos especiales</h3>
-              <p class="col-8">Utiliza esté código de descuento en nuestras tiendas en linea, recibe puntos en tus
+              <p class="col-7">Utiliza esté código de descuento en nuestras tiendas en linea, recibe puntos en tus
                 compras realizadas
                 desde la tienda</p>
               <p class="TiendaEnLinea__codigo__discount col-2">Codigo: <span>TESTCODE</span></p>
@@ -136,9 +164,127 @@
         </div>
 
       </div>
-      <div class="SobreNosotros"></div>
-      <div class="Merch"></div>
-      <div class="ContainerCapacitaciones"></div>
+      <div class="SobreNosotros">
+        <div class="SobreNosotros__content">
+          <img class="SobreNosotros__background" src="./assets/Nosotros.png" alt="">
+          <div class="SobreNosotros__propuestaValor">
+            <h2>Conoce el poder de la calidad</h2>
+            <p>¿Ya nos conocías? Sumergete en nuestro video corporativo y descubre todo lo que FG Electrical tiene para
+              ti.</p>
+            <button>Nuestras propuesta de valor</button>
+          </div>
+          <div class="SobreNosotros__play ">
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16">
+              <path fill="currentColor"
+                d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0M1.5 8a6.5 6.5 0 1 0 13 0a6.5 6.5 0 0 0-13 0m4.879-2.773l4.264 2.559a.25.25 0 0 1 0 .428l-4.264 2.559A.25.25 0 0 1 6 10.559V5.442a.25.25 0 0 1 .379-.215" />
+            </svg>
+          </div>
+        </div>
+      </div>
+      <div class="Merch">
+        <div class="Merch__content">
+          <div class="Merch__propuestaValor">
+            <h2>Solicita tu Merchandising</h2>
+            <p>¿Nos invitas a formar parte de tus tiendas? Conoce nuestros terminos y condiciones. Disfruta de estos y
+              muchos otros beneficios para ti.</p>
+            <button>Da vida a tu sucursal</button>
+          </div>
+          <div class="Merch__play ">
+            <img src="./assets/Merch.svg" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="ContainerCapacitaciones">
+        <div class="event__container row">
+          <div class="event__title col-12">
+            <h2>Próximamente</h2>
+            <div class="event__content row">
+              <div class="col-6">
+                <img src="https://valmact.com/assets/img/valmact.svg" alt="">
+              </div>
+              <div class="col-6">
+                dd/mm/yyyy
+              </div>
+              <div class="col-12">
+                <i>Ubicación: Atizapán de zaragoza</i>
+                <p>12 pm - 13 pm</p>
+              </div>
+              <div class="col-12">
+                <a href="">¡Aparta tu lugar!</a>
+              </div>
+            </div>
+            <div class="event__content row">
+              <div class="col-6">
+                <img src="https://valmact.com/assets/img/valmact.svg" alt="">
+              </div>
+              <div class="col-6">
+                dd/mm/yyyy
+              </div>
+              <div class="col-12">
+                <i>Ubicación: Atizapán de zaragoza</i>
+                <p>12 pm - 13 pm</p>
+              </div>
+              <div class="col-12">
+                <a href="">¡Aparta tu lugar!</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12">
+            <img src="./assets/Corona.png" alt="">
+            <div class="ranking__sales">
+              <h2>Ranking de concurso</h2>
+              <ul>
+                <li>Alcanza la cima ¡Participa!</li>
+                <li>Alcanza la cima ¡Participa!</li>
+                <li>Alcanza la cima ¡Participa!</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-12 container__boton">
+            <a>Ver como participar</a>
+          </div>
+          <div class="col-12">
+            <div class="social__media row">
+              <div class="col-3">
+                <a href="">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+                    <g fill="none">
+                      <path
+                        d="M24 0v24H0V0zM12.593 23.258l-.011.002l-.071.035l-.02.004l-.014-.004l-.071-.035c-.01-.004-.019-.001-.024.005l-.004.01l-.017.428l.005.02l.01.013l.104.074l.015.004l.012-.004l.104-.074l.012-.016l.004-.017l-.017-.427c-.002-.01-.009-.017-.017-.018m.265-.113l-.013.002l-.185.093l-.01.01l-.003.011l.018.43l.005.012l.008.007l.201.093c.012.004.023 0 .029-.008l.004-.014l-.034-.614c-.003-.012-.01-.02-.02-.022m-.715.002a.023.023 0 0 0-.027.006l-.006.014l-.034.614c0 .012.007.02.017.024l.015-.002l.201-.093l.01-.008l.004-.011l.017-.43l-.003-.012l-.01-.01z" />
+                      <path fill="#031226"
+                        d="M13.5 21.888C18.311 21.164 22 17.013 22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 5.013 3.689 9.165 8.5 9.888V15H9a1.5 1.5 0 0 1 0-3h1.5v-2A3.5 3.5 0 0 1 14 6.5h.5a1.5 1.5 0 0 1 0 3H14a.5.5 0 0 0-.5.5v2H15a1.5 1.5 0 0 1 0 3h-1.5z" />
+                    </g>
+                  </svg>
+                </a>
+              </div>
+              <div class="col-3">
+                <a href="">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+                    <path fill="#031226"
+                      d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4zm9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8A1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5a5 5 0 0 1-5 5a5 5 0 0 1-5-5a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3" />
+                  </svg>
+                </a>
+              </div>
+              <div class="col-3">
+                <a href="">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16">
+                    <path fill="#031226"
+                      d="M9.294 6.928L14.357 1h-1.2L8.762 6.147L5.25 1H1.2l5.31 7.784L1.2 15h1.2l4.642-5.436L10.751 15h4.05zM7.651 8.852l-.538-.775L2.832 1.91h1.843l3.454 4.977l.538.775l4.491 6.47h-1.843z" />
+                  </svg>
+                </a>
+              </div>
+              <div class="col-3">
+                <a href="">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+                    <path fill="#031226"
+                      d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z" />
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
